[metadata]
name = Pycaro
version = attr: sqlalchemy.__version__
description = Unbound variables detection
long_description = file: README.md
long_description_content_type = text/markdown
author = @anteverse
url = https://github.com/anteverse/pycaro
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
include_package_data = True
python_requires = >=3.6

install_requires =
    importlib-metadata;python_version<"3.8"
    click
    termcolor

[options.extras_require]
dev =
    black
    coverage[toml]
    pytest
    pytest-cov
